--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,12 @@
         {% endif %}
     </title>
 
-    {% if site.highlighter %}
-        <link rel='stylesheet' href='{{ site.url }}/assets/css/syntax.css' type='text/css'>
-    {% endif %}
-    
+    <style>
+      body {
+	  max-width: 950px;
+	  margin: auto;
+      }
+    </style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
 </head>
