Figuring this out

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}{{ page.shortUrl }}</h1>
+<h1>{{ page.title }}{{site.baseurl}}{{ page.shortUrl }}</h1>
 <div class='separator'></div>
         
 {{ content }}
