--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,11 @@
       body {
 	  max-width: 950px;
 	  margin: auto;
+	  padding: 4px;
+      }
+      pre {
+	  border: 2px solid silver;
+	  border-radius: 3px;
       }
     </style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
