--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
 	  padding: 8px;
       }
       pre {
-	  border: 2px solid silver;
-	  border-radius: 3px;
+	  border: 1px solid gray;
+	  border-radius: 6px;
 	  padding: 8px;
       }
     </style>
