--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     {% include header.html %}
 
     {{ content }}
-<hr>
-    <p><small> <i>Build with <a href="https://jekyllrb.com/">Jekyll</a> and  <a href="https://github.com/cyevgeniy/jekyll-true-minimal/">true minimal theme</a></i> </small></p>
+<br><br>
+    <p><small> <a href="https://github.com/cyevgeniy/jekyll-true-minimal/">True minimal theme</a></i> </small></p>
 </body>
 </html>
