--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 	  max-width: 950px;
 	  margin: auto;
 	  padding: 8px;
-	  font-family: sans;
+	  font-family: Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', source-sans-pro, sans-serif;
       }
       pre {
 	  border: 1px solid gray;
