Update the fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,15 +13,17 @@
 
     <style>
       body {
-	  max-width: 780px;
-	  margin: auto;
-	  padding: 8px;
-	  font-family: Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', source-sans-pro, sans-serif;
+        max-width: 780px;
+        margin: auto;
+        padding: 8px;
+        font-family: Seravek, 'Gill Sans Nova', 'DejaVu Sans', Ubuntu, Calibri, source-sans-pro, sans-serif;
+        font-size: 1.1em;
       }
+
       pre {
-	  border: 1px solid gray;
-	  border-radius: 6px;
-	  padding: 8px;
+        border: 1px solid gray;
+        border-radius: 6px;
+        padding: 8px;
       }
     </style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
