--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         max-width: 780px;
         margin: auto;
         padding: 8px;
-        font-family: Seravek, 'Gill Sans Nova', 'DejaVu Sans', Ubuntu, Calibri, source-sans-pro, sans-serif;
+        font-family: serif, Times New Roman, Seravek, 'Gill Sans Nova', 'DejaVu Sans', Ubuntu, Calibri, source-sans-pro, sans-serif;
         font-size: 1.1em;
       }
 
@@ -25,6 +25,10 @@
         border-radius: 6px;
         padding: 8px;
       }
+
+        h1, h2, h3 {
+            font-family: sans-serif;
+        }
     </style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
