--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
         max-width: 780px;
         margin: auto;
         padding: 8px;
-        font-family: serif, Times New Roman, Seravek, 'Gill Sans Nova', 'DejaVu Sans', Ubuntu, Calibri, source-sans-pro, sans-serif;
-        font-size: 1.1em;
+        font-family: serif, Seravek, 'Gill Sans Nova', 'DejaVu Sans', Ubuntu, Calibri, source-sans-pro, sans-serif;
+        font-size: 1.2em;
       }
 
       pre {
