--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
         border: 1px solid gray;
         border-radius: 6px;
         padding: 8px;
+        white-space: pre-wrap;
       }
 
         h1, h2, h3 {
