--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+<head>
+    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
+</head>
+
+<a class="btn btn-rss" href="/feed.xml" target="_blank">RSS</a>
+
 <h1>{{ page.title }}{{site.baseurl}}{{ page.shortUrl }}</h1>
 <div class='separator'></div>
         
