--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
             max-width: 780px;
             margin: auto;
             padding: 8px;
-            font-size: 1.2em;
+            font-family: sans;
         }
 
         pre {
