--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
             max-width: 780px;
             margin: auto;
             padding: 8px;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, 
-                "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", 
+            font-family: -apple-system, BlinkMacSystemFont, Arial, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, 
+                "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif, "Apple Color Emoji", 
                 "Segoe UI Emoji", "Segoe UI Symbol";
         }
 
